v0.2.1 ()
  New features
	* create_resources now supports the defaults system.

v0.2.0 (2012/10/08)
  New features
	* Lua integration for custom functions.
	* Automatically creates magic types based on the content of the modules.
  Bugs fixed
	* Defaults parameters can now end with a comma.

v0.1.8.0 (2012/09/20)
  New features
	* Refactoring of the PuppetDB API for interfacing with the facter library.
	* Support of exported resource resolution through PuppetDB ! This results
	in an API breakage.
	* Make binary distribution possible (ruby helper path).
  Bugs fixed
	* Defines with spurious parameters, or unset mandatory parameters, should
	now be catched.
	* Exception handling for the HTTP failures.
	* Handles undefined variables in Ruby templates.
	* Undefined variables in Erbs now always throw exceptions. This is
	stricter than Puppet (which throws exceptions for "native" variables), but
	is I believe good practice.

v0.1.7.2 (2012/09/17)
  New features
	* Preliminary support for PuppetDB

v0.1.7.1 (2012/09/14)
  Bugs fixed
	* Various details have been modified since the official language
	  documentation has been published.
	* Better handling of collector conditions.
	* Solves bug with interpolable strings that are not resolved when first
	  found.
  New features
	* Amending attributes with a collector.
	* Stdlib functions : chomp
	* Resource pretty printer now aligns =>.
	* Case statements with regexps.

v0.1.7 (2012/08/24)
  Bugs fixed
	* Fix bug with '<' in the Erb parser !
	* Assignments can now be any valid Puppet expression.
	* Proper list of metaparameters.
  New features
	* Quick resolution of boolean conditions.
	* Start of the move to a real PCRE library.
	* Function is_domain_name.
	* New native types : zone_record, cron, exec, group, host, mount, file.

v0.1.6 (2012/08/01)
  New features
	* Errors now print a stack trace (only works with profiling builds).
	* Nested classes.
	* generate() function.